src/Parser/gen/FormulaParser.cpp

// Generated from /home/fine/CLionProjects/Monitors/src/Parser/Formula.g4 by ANTLR 4.8


#include "FormulaListener.h"
#include "FormulaVisitor.h"

#include "FormulaParser.h"


using namespace antlrcpp;
using namespace antlr4;

FormulaParser::FormulaParser(TokenStream *input) : Parser(input) {
    _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FormulaParser::~FormulaParser() {
    delete _interpreter;
}

std::string FormulaParser::getGrammarFileName() const {
    return "Formula.g4";
}

const std::vector<std::string> &FormulaParser::getRuleNames() const {
    return _ruleNames;
}

dfa::Vocabulary &FormulaParser::getVocabulary() const {
    return _vocabulary;
}


//----------------- FormulaContext ------------------------------------------------------------------

FormulaParser::FormulaContext::FormulaContext(ParserRuleContext *parent, size_t invokingState)
        : ParserRuleContext(parent, invokingState) {
}

FormulaParser::ExprContext *FormulaParser::FormulaContext::expr() {
    return getRuleContext<FormulaParser::ExprContext>(0);
}


size_t FormulaParser::FormulaContext::getRuleIndex() const {
    return FormulaParser::RuleFormula;
}

void FormulaParser::FormulaContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterFormula(this);
    }
}

void FormulaParser::FormulaContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitFormula(this);
    }
}


antlrcpp::Any FormulaParser::FormulaContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitFormula(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}

FormulaParser::FormulaContext *FormulaParser::formula() {
    FormulaContext *_localctx = _tracker.createInstance<FormulaContext>(_ctx, getState());
    enterRule(_localctx, 0, FormulaParser::RuleFormula);

    auto onExit = finally([=] {
        exitRule();
    });
    try {
        enterOuterAlt(_localctx, 1);
        setState(16);
        expr(0);

    }
    catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

FormulaParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
        : ParserRuleContext(parent, invokingState) {
}


size_t FormulaParser::ExprContext::getRuleIndex() const {
    return FormulaParser::RuleExpr;
}

void FormulaParser::ExprContext::copyFrom(ExprContext *ctx) {
    ParserRuleContext::copyFrom(ctx);
}

//----------------- EquivalenceContext ------------------------------------------------------------------

std::vector<FormulaParser::ExprContext *> FormulaParser::EquivalenceContext::expr() {
    return getRuleContexts<FormulaParser::ExprContext>();
}

FormulaParser::ExprContext *FormulaParser::EquivalenceContext::expr(size_t i) {
    return getRuleContext<FormulaParser::ExprContext>(i);
}

tree::TerminalNode *FormulaParser::EquivalenceContext::EQ() {
    return getToken(FormulaParser::EQ, 0);
}

FormulaParser::EquivalenceContext::EquivalenceContext(ExprContext *ctx) { copyFrom(ctx); }

void FormulaParser::EquivalenceContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterEquivalence(this);
    }
}

void FormulaParser::EquivalenceContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitEquivalence(this);
    }
}

antlrcpp::Any FormulaParser::EquivalenceContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitEquivalence(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}
//----------------- XorExprContext ------------------------------------------------------------------

FormulaParser::Xor_exprContext *FormulaParser::XorExprContext::xor_expr() {
    return getRuleContext<FormulaParser::Xor_exprContext>(0);
}

FormulaParser::XorExprContext::XorExprContext(ExprContext *ctx) { copyFrom(ctx); }

void FormulaParser::XorExprContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterXorExpr(this);
    }
}

void FormulaParser::XorExprContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitXorExpr(this);
    }
}

antlrcpp::Any FormulaParser::XorExprContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitXorExpr(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}
//----------------- ImplicationContext ------------------------------------------------------------------

std::vector<FormulaParser::ExprContext *> FormulaParser::ImplicationContext::expr() {
    return getRuleContexts<FormulaParser::ExprContext>();
}

FormulaParser::ExprContext *FormulaParser::ImplicationContext::expr(size_t i) {
    return getRuleContext<FormulaParser::ExprContext>(i);
}

tree::TerminalNode *FormulaParser::ImplicationContext::IMPL() {
    return getToken(FormulaParser::IMPL, 0);
}

FormulaParser::ImplicationContext::ImplicationContext(ExprContext *ctx) { copyFrom(ctx); }

void FormulaParser::ImplicationContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterImplication(this);
    }
}

void FormulaParser::ImplicationContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitImplication(this);
    }
}

antlrcpp::Any FormulaParser::ImplicationContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitImplication(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}

FormulaParser::ExprContext *FormulaParser::expr() {
    return expr(0);
}

FormulaParser::ExprContext *FormulaParser::expr(int precedence) {
    ParserRuleContext *parentContext = _ctx;
    size_t parentState = getState();
    FormulaParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
    FormulaParser::ExprContext *previousContext = _localctx;
    (void) previousContext; // Silence compiler, in case the context is not used by generated code.
    size_t startState = 2;
    enterRecursionRule(_localctx, 2, FormulaParser::RuleExpr, precedence);


    auto onExit = finally([=] {
        unrollRecursionContexts(parentContext);
    });
    try {
        size_t alt;
        enterOuterAlt(_localctx, 1);
        _localctx = _tracker.createInstance<XorExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(19);
        xor_expr();
        _ctx->stop = _input->LT(-1);
        setState(29);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
            if (alt == 1) {
                if (!_parseListeners.empty()) {
                    triggerExitRuleEvent();
                }
                previousContext = _localctx;
                setState(27);
                _errHandler->sync(this);
                switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
                    case 1: {
                        auto newContext = _tracker.createInstance<ImplicationContext>(
                                _tracker.createInstance<ExprContext>(parentContext, parentState));
                        _localctx = newContext;
                        newContext->left = previousContext;
                        pushNewRecursionContext(newContext, startState, RuleExpr);
                        setState(21);

                        if (!(precpred(_ctx, 3))) { throw FailedPredicateException(this, "precpred(_ctx, 3)"); }
                        setState(22);
                        dynamic_cast<ImplicationContext *>(_localctx)->op = match(FormulaParser::IMPL);
                        setState(23);
                        dynamic_cast<ImplicationContext *>(_localctx)->right = expr(3);
                        break;
                    }

                    case 2: {
                        auto newContext = _tracker.createInstance<EquivalenceContext>(
                                _tracker.createInstance<ExprContext>(parentContext, parentState));
                        _localctx = newContext;
                        newContext->left = previousContext;
                        pushNewRecursionContext(newContext, startState, RuleExpr);
                        setState(24);

                        if (!(precpred(_ctx, 2))) { throw FailedPredicateException(this, "precpred(_ctx, 2)"); }
                        setState(25);
                        dynamic_cast<EquivalenceContext *>(_localctx)->op = match(FormulaParser::EQ);
                        setState(26);
                        dynamic_cast<EquivalenceContext *>(_localctx)->right = expr(2);
                        break;
                    }

                }
            }
            setState(31);
            _errHandler->sync(this);
            alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        }
    }
    catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }
    return _localctx;
}

//----------------- Xor_exprContext ------------------------------------------------------------------

FormulaParser::Xor_exprContext::Xor_exprContext(ParserRuleContext *parent, size_t invokingState)
        : ParserRuleContext(parent, invokingState) {
}


size_t FormulaParser::Xor_exprContext::getRuleIndex() const {
    return FormulaParser::RuleXor_expr;
}

void FormulaParser::Xor_exprContext::copyFrom(Xor_exprContext *ctx) {
    ParserRuleContext::copyFrom(ctx);
}

//----------------- XorContext ------------------------------------------------------------------

std::vector<FormulaParser::Or_exprContext *> FormulaParser::XorContext::or_expr() {
    return getRuleContexts<FormulaParser::Or_exprContext>();
}

FormulaParser::Or_exprContext *FormulaParser::XorContext::or_expr(size_t i) {
    return getRuleContext<FormulaParser::Or_exprContext>(i);
}

std::vector<tree::TerminalNode *> FormulaParser::XorContext::XOR() {
    return getTokens(FormulaParser::XOR);
}

tree::TerminalNode *FormulaParser::XorContext::XOR(size_t i) {
    return getToken(FormulaParser::XOR, i);
}

FormulaParser::XorContext::XorContext(Xor_exprContext *ctx) { copyFrom(ctx); }

void FormulaParser::XorContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterXor(this);
    }
}

void FormulaParser::XorContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitXor(this);
    }
}

antlrcpp::Any FormulaParser::XorContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitXor(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}

FormulaParser::Xor_exprContext *FormulaParser::xor_expr() {
    Xor_exprContext *_localctx = _tracker.createInstance<Xor_exprContext>(_ctx, getState());
    enterRule(_localctx, 4, FormulaParser::RuleXor_expr);

    auto onExit = finally([=] {
        exitRule();
    });
    try {
        size_t alt;
        _localctx = dynamic_cast<Xor_exprContext *>(_tracker.createInstance<FormulaParser::XorContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(32);
        or_expr();
        setState(37);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
            if (alt == 1) {
                setState(33);
                dynamic_cast<XorContext *>(_localctx)->op = match(FormulaParser::XOR);
                setState(34);
                or_expr();
            }
            setState(39);
            _errHandler->sync(this);
            alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
        }

    }
    catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Or_exprContext ------------------------------------------------------------------

FormulaParser::Or_exprContext::Or_exprContext(ParserRuleContext *parent, size_t invokingState)
        : ParserRuleContext(parent, invokingState) {
}


size_t FormulaParser::Or_exprContext::getRuleIndex() const {
    return FormulaParser::RuleOr_expr;
}

void FormulaParser::Or_exprContext::copyFrom(Or_exprContext *ctx) {
    ParserRuleContext::copyFrom(ctx);
}

//----------------- OrContext ------------------------------------------------------------------

std::vector<FormulaParser::And_exprContext *> FormulaParser::OrContext::and_expr() {
    return getRuleContexts<FormulaParser::And_exprContext>();
}

FormulaParser::And_exprContext *FormulaParser::OrContext::and_expr(size_t i) {
    return getRuleContext<FormulaParser::And_exprContext>(i);
}

std::vector<tree::TerminalNode *> FormulaParser::OrContext::OR() {
    return getTokens(FormulaParser::OR);
}

tree::TerminalNode *FormulaParser::OrContext::OR(size_t i) {
    return getToken(FormulaParser::OR, i);
}

FormulaParser::OrContext::OrContext(Or_exprContext *ctx) { copyFrom(ctx); }

void FormulaParser::OrContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterOr(this);
    }
}

void FormulaParser::OrContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitOr(this);
    }
}

antlrcpp::Any FormulaParser::OrContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitOr(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}

FormulaParser::Or_exprContext *FormulaParser::or_expr() {
    Or_exprContext *_localctx = _tracker.createInstance<Or_exprContext>(_ctx, getState());
    enterRule(_localctx, 6, FormulaParser::RuleOr_expr);

    auto onExit = finally([=] {
        exitRule();
    });
    try {
        size_t alt;
        _localctx = dynamic_cast<Or_exprContext *>(_tracker.createInstance<FormulaParser::OrContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(40);
        and_expr();
        setState(45);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
            if (alt == 1) {
                setState(41);
                dynamic_cast<OrContext *>(_localctx)->op = match(FormulaParser::OR);
                setState(42);
                and_expr();
            }
            setState(47);
            _errHandler->sync(this);
            alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
        }

    }
    catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- And_exprContext ------------------------------------------------------------------

FormulaParser::And_exprContext::And_exprContext(ParserRuleContext *parent, size_t invokingState)
        : ParserRuleContext(parent, invokingState) {
}


size_t FormulaParser::And_exprContext::getRuleIndex() const {
    return FormulaParser::RuleAnd_expr;
}

void FormulaParser::And_exprContext::copyFrom(And_exprContext *ctx) {
    ParserRuleContext::copyFrom(ctx);
}

//----------------- AndContext ------------------------------------------------------------------

std::vector<FormulaParser::Release_until_exprContext *> FormulaParser::AndContext::release_until_expr() {
    return getRuleContexts<FormulaParser::Release_until_exprContext>();
}

FormulaParser::Release_until_exprContext *FormulaParser::AndContext::release_until_expr(size_t i) {
    return getRuleContext<FormulaParser::Release_until_exprContext>(i);
}

std::vector<tree::TerminalNode *> FormulaParser::AndContext::AND() {
    return getTokens(FormulaParser::AND);
}

tree::TerminalNode *FormulaParser::AndContext::AND(size_t i) {
    return getToken(FormulaParser::AND, i);
}

FormulaParser::AndContext::AndContext(And_exprContext *ctx) { copyFrom(ctx); }

void FormulaParser::AndContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterAnd(this);
    }
}

void FormulaParser::AndContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitAnd(this);
    }
}

antlrcpp::Any FormulaParser::AndContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitAnd(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}

FormulaParser::And_exprContext *FormulaParser::and_expr() {
    And_exprContext *_localctx = _tracker.createInstance<And_exprContext>(_ctx, getState());
    enterRule(_localctx, 8, FormulaParser::RuleAnd_expr);

    auto onExit = finally([=] {
        exitRule();
    });
    try {
        size_t alt;
        _localctx = dynamic_cast<And_exprContext *>(_tracker.createInstance<FormulaParser::AndContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(48);
        release_until_expr();
        setState(53);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
            if (alt == 1) {
                setState(49);
                dynamic_cast<AndContext *>(_localctx)->op = match(FormulaParser::AND);
                setState(50);
                release_until_expr();
            }
            setState(55);
            _errHandler->sync(this);
            alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
        }

    }
    catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- Release_until_exprContext ------------------------------------------------------------------

FormulaParser::Release_until_exprContext::Release_until_exprContext(ParserRuleContext *parent, size_t invokingState)
        : ParserRuleContext(parent, invokingState) {
}


size_t FormulaParser::Release_until_exprContext::getRuleIndex() const {
    return FormulaParser::RuleRelease_until_expr;
}

void FormulaParser::Release_until_exprContext::copyFrom(Release_until_exprContext *ctx) {
    ParserRuleContext::copyFrom(ctx);
}

//----------------- UnaryExprContext ------------------------------------------------------------------

FormulaParser::UnaryContext *FormulaParser::UnaryExprContext::unary() {
    return getRuleContext<FormulaParser::UnaryContext>(0);
}

FormulaParser::UnaryExprContext::UnaryExprContext(Release_until_exprContext *ctx) { copyFrom(ctx); }

void FormulaParser::UnaryExprContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterUnaryExpr(this);
    }
}

void FormulaParser::UnaryExprContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitUnaryExpr(this);
    }
}

antlrcpp::Any FormulaParser::UnaryExprContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitUnaryExpr(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}
//----------------- ReleaseContext ------------------------------------------------------------------

std::vector<FormulaParser::UnaryContext *> FormulaParser::ReleaseContext::unary() {
    return getRuleContexts<FormulaParser::UnaryContext>();
}

FormulaParser::UnaryContext *FormulaParser::ReleaseContext::unary(size_t i) {
    return getRuleContext<FormulaParser::UnaryContext>(i);
}

tree::TerminalNode *FormulaParser::ReleaseContext::RELEASE() {
    return getToken(FormulaParser::RELEASE, 0);
}

FormulaParser::ReleaseContext::ReleaseContext(Release_until_exprContext *ctx) { copyFrom(ctx); }

void FormulaParser::ReleaseContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterRelease(this);
    }
}

void FormulaParser::ReleaseContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitRelease(this);
    }
}

antlrcpp::Any FormulaParser::ReleaseContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitRelease(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}
//----------------- UntilContext ------------------------------------------------------------------

std::vector<FormulaParser::UnaryContext *> FormulaParser::UntilContext::unary() {
    return getRuleContexts<FormulaParser::UnaryContext>();
}

FormulaParser::UnaryContext *FormulaParser::UntilContext::unary(size_t i) {
    return getRuleContext<FormulaParser::UnaryContext>(i);
}

tree::TerminalNode *FormulaParser::UntilContext::UNTIL() {
    return getToken(FormulaParser::UNTIL, 0);
}

FormulaParser::UntilContext::UntilContext(Release_until_exprContext *ctx) { copyFrom(ctx); }

void FormulaParser::UntilContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterUntil(this);
    }
}

void FormulaParser::UntilContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitUntil(this);
    }
}

antlrcpp::Any FormulaParser::UntilContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitUntil(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}

FormulaParser::Release_until_exprContext *FormulaParser::release_until_expr() {
    Release_until_exprContext *_localctx = _tracker.createInstance<Release_until_exprContext>(_ctx, getState());
    enterRule(_localctx, 10, FormulaParser::RuleRelease_until_expr);

    auto onExit = finally([=] {
        exitRule();
    });
    try {
        setState(65);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
            case 1: {
                _localctx = dynamic_cast<Release_until_exprContext *>(_tracker.createInstance<FormulaParser::ReleaseContext>(
                        _localctx));
                enterOuterAlt(_localctx, 1);
                setState(56);
                dynamic_cast<ReleaseContext *>(_localctx)->left = unary();
                setState(57);
                dynamic_cast<ReleaseContext *>(_localctx)->op = match(FormulaParser::RELEASE);
                setState(58);
                dynamic_cast<ReleaseContext *>(_localctx)->right = unary();
                break;
            }

            case 2: {
                _localctx = dynamic_cast<Release_until_exprContext *>(_tracker.createInstance<FormulaParser::UntilContext>(
                        _localctx));
                enterOuterAlt(_localctx, 2);
                setState(60);
                dynamic_cast<UntilContext *>(_localctx)->left = unary();
                setState(61);
                dynamic_cast<UntilContext *>(_localctx)->op = match(FormulaParser::UNTIL);
                setState(62);
                dynamic_cast<UntilContext *>(_localctx)->right = unary();
                break;
            }

            case 3: {
                _localctx = dynamic_cast<Release_until_exprContext *>(_tracker.createInstance<FormulaParser::UnaryExprContext>(
                        _localctx));
                enterOuterAlt(_localctx, 3);
                setState(64);
                unary();
                break;
            }

        }

    }
    catch (RecognitionException &e) {
        _errHandler->reportError(this, e);
        _localctx->exception = std::current_exception();
        _errHandler->recover(this, _localctx->exception);
    }

    return _localctx;
}

//----------------- UnaryContext ------------------------------------------------------------------

FormulaParser::UnaryContext::UnaryContext(ParserRuleContext *parent, size_t invokingState)
        : ParserRuleContext(parent, invokingState) {
}


size_t FormulaParser::UnaryContext::getRuleIndex() const {
    return FormulaParser::RuleUnary;
}

void FormulaParser::UnaryContext::copyFrom(UnaryContext *ctx) {
    ParserRuleContext::copyFrom(ctx);
}

//----------------- NextStrongContext ------------------------------------------------------------------

tree::TerminalNode *FormulaParser::NextStrongContext::NEXT_STRONG() {
    return getToken(FormulaParser::NEXT_STRONG, 0);
}

FormulaParser::AtomContext *FormulaParser::NextStrongContext::atom() {
    return getRuleContext<FormulaParser::AtomContext>(0);
}

FormulaParser::NextStrongContext::NextStrongContext(UnaryContext *ctx) { copyFrom(ctx); }

void FormulaParser::NextStrongContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterNextStrong(this);
    }
}

void FormulaParser::NextStrongContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitNextStrong(this);
    }
}

antlrcpp::Any FormulaParser::NextStrongContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitNextStrong(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}
//----------------- GloballyContext ------------------------------------------------------------------

tree::TerminalNode *FormulaParser::GloballyContext::GLOBALLY() {
    return getToken(FormulaParser::GLOBALLY, 0);
}

FormulaParser::AtomContext *FormulaParser::GloballyContext::atom() {
    return getRuleContext<FormulaParser::AtomContext>(0);
}

FormulaParser::GloballyContext::GloballyContext(UnaryContext *ctx) { copyFrom(ctx); }

void FormulaParser::GloballyContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterGlobally(this);
    }
}

void FormulaParser::GloballyContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitGlobally(this);
    }
}

antlrcpp::Any FormulaParser::GloballyContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitGlobally(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}
//----------------- NotContext ------------------------------------------------------------------

tree::TerminalNode *FormulaParser::NotContext::NOT() {
    return getToken(FormulaParser::NOT, 0);
}

FormulaParser::AtomContext *FormulaParser::NotContext::atom() {
    return getRuleContext<FormulaParser::AtomContext>(0);
}

FormulaParser::NotContext::NotContext(UnaryContext *ctx) { copyFrom(ctx); }

void FormulaParser::NotContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterNot(this);
    }
}

void FormulaParser::NotContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitNot(this);
    }
}

antlrcpp::Any FormulaParser::NotContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitNot(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}
//----------------- OnceContext ------------------------------------------------------------------

tree::TerminalNode *FormulaParser::OnceContext::ONCE() {
    return getToken(FormulaParser::ONCE, 0);
}

FormulaParser::AtomContext *FormulaParser::OnceContext::atom() {
    return getRuleContext<FormulaParser::AtomContext>(0);
}

FormulaParser::OnceContext::OnceContext(UnaryContext *ctx) { copyFrom(ctx); }

void FormulaParser::OnceContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterOnce(this);
    }
}

void FormulaParser::OnceContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitOnce(this);
    }
}

antlrcpp::Any FormulaParser::OnceContext::accept(tree::ParseTreeVisitor *visitor) {
    if (auto parserVisitor = dynamic_cast<FormulaVisitor *>(visitor)) {
        return parserVisitor->visitOnce(this);
    }
    else {
        return visitor->visitChildren(this);
    }
}
//----------------- PreviouslyContext ------------------------------------------------------------------

tree::TerminalNode *FormulaParser::PreviouslyContext::PREVIOUSLY() {
    return getToken(FormulaParser::PREVIOUSLY, 0);
}

FormulaParser::AtomContext *FormulaParser::PreviouslyContext::atom() {
    return getRuleContext<FormulaParser::AtomContext>(0);
}

FormulaParser::PreviouslyContext::PreviouslyContext(UnaryContext *ctx) { copyFrom(ctx); }

void FormulaParser::PreviouslyContext::enterRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->enterPreviously(this);
    }
}

void FormulaParser::PreviouslyContext::exitRule(tree::ParseTreeListener *listener) {
    auto parserListener = dynamic_cast<FormulaListener *>(listener);
    if (parserListener != nullptr) {
        parserListener->exitPreviously(this);
    }
}
